add documentation; apply black

--- a/tatc-orbit-example.ipynb
+++ b/tatc-orbit-example.ipynb
@@ -25,39 +25,82 @@
     "from sgp4 import exporter, omm\n",
     "from sgp4.api import Satrec\n",
     "\n",
+    "\n",
     "class OrbitState(BaseModel):\n",
     "    object_name: Optional[str] = Field(None, description=\"Object name.\")\n",
     "    object_id: Optional[str] = Field(None, description=\"Object identifier.\")\n",
-    "    epoch: datetime = Field(..., description=\"Epoch (time of orbit element specification).\")\n",
-    "    mean_motion: float = Field(..., gt=0, description=\"Mean motion (revolutions per day).\")\n",
+    "    epoch: datetime = Field(\n",
+    "        ..., description=\"Epoch (time of orbit element specification).\"\n",
+    "    )\n",
+    "    mean_motion: float = Field(\n",
+    "        ..., gt=0, description=\"Mean motion (revolutions per day).\"\n",
+    "    )\n",
     "    eccentricity: float = Field(..., ge=0, lt=1, description=\"Eccentricity.\")\n",
     "    inclination: float = Field(..., ge=0, le=180, description=\"Inclination (degrees).\")\n",
-    "    ra_of_asc_node: float = Field(..., ge=0, lt=360, description=\"Right ascension of ascending node (degrees).\")\n",
-    "    arg_of_pericenter: float = Field(..., ge=0, lt=360, description=\"Argument of pericenter (degrees).\")\n",
-    "    mean_anomaly: float = Field(..., ge=0, lt=360, description=\"Mean anomaly (degrees).\")\n",
-    "    ephemeris_type: Optional[int] = Field(0, ge=0, description=\"Ephemeris type (0: Default (Kozai), 1: SGP, 2: SGP4 (Brouwer), 3: SDP4, 4: SGP8, 5: SDP8).\")\n",
-    "    classification_type: Optional[str] = Field(\"U\", pattern=\"[UCS]\", description=\"Classification (U: unclassified, C: classified, S: secret).\" )\n",
-    "    norad_cat_id: Optional[int] = Field(None, ge=0, description=\"NORAD catalog identifier.\")\n",
-    "    element_set_no: Optional[int] = Field(None, ge=0, le=999, description=\"Element set number.\")\n",
-    "    rev_at_epoch: Optional[int] = Field(None, ge=0, le=99999, description=\"Revolution number at epoch.\")\n",
-    "    bstar: float = Field(0.0, ge=0, lt=1, description=\"B-star drag term (radiation pressure coefficient).\")\n",
-    "    mean_motion_dot: float = Field(0.0, gt=-1, lt=1, description=\"First derivative of mean motion (ballistic coefficient).\")\n",
-    "    mean_motion_ddot: float = Field(0.0, gt=-1, lt=1, description=\"Second derivative of mean motion.\")\n",
+    "    ra_of_asc_node: float = Field(\n",
+    "        ..., ge=0, lt=360, description=\"Right ascension of ascending node (degrees).\"\n",
+    "    )\n",
+    "    arg_of_pericenter: float = Field(\n",
+    "        ..., ge=0, lt=360, description=\"Argument of pericenter (degrees).\"\n",
+    "    )\n",
+    "    mean_anomaly: float = Field(\n",
+    "        ..., ge=0, lt=360, description=\"Mean anomaly (degrees).\"\n",
+    "    )\n",
+    "    ephemeris_type: Optional[int] = Field(\n",
+    "        0,\n",
+    "        ge=0,\n",
+    "        description=\"Ephemeris type (0: Default (Kozai), 1: SGP, 2: SGP4 (Brouwer), 3: SDP4, 4: SGP8, 5: SDP8).\",\n",
+    "    )\n",
+    "    classification_type: Optional[str] = Field(\n",
+    "        \"U\",\n",
+    "        pattern=\"[UCS]\",\n",
+    "        description=\"Classification (U: unclassified, C: classified, S: secret).\",\n",
+    "    )\n",
+    "    norad_cat_id: Optional[int] = Field(\n",
+    "        None, ge=0, description=\"NORAD catalog identifier.\"\n",
+    "    )\n",
+    "    element_set_no: Optional[int] = Field(\n",
+    "        None, ge=0, le=999, description=\"Element set number.\"\n",
+    "    )\n",
+    "    rev_at_epoch: Optional[int] = Field(\n",
+    "        None, ge=0, le=99999, description=\"Revolution number at epoch.\"\n",
+    "    )\n",
+    "    bstar: float = Field(\n",
+    "        0.0,\n",
+    "        ge=0,\n",
+    "        lt=1,\n",
+    "        description=\"B-star drag term (radiation pressure coefficient).\",\n",
+    "    )\n",
+    "    mean_motion_dot: float = Field(\n",
+    "        0.0,\n",
+    "        gt=-1,\n",
+    "        lt=1,\n",
+    "        description=\"First derivative of mean motion (ballistic coefficient).\",\n",
+    "    )\n",
+    "    mean_motion_ddot: float = Field(\n",
+    "        0.0, gt=-1, lt=1, description=\"Second derivative of mean motion.\"\n",
+    "    )\n",
     "\n",
     "    @classmethod\n",
-    "    def from_omm(cls, omm) -> 'OrbitState':\n",
-    "        return OrbitState.model_validate(dict([(key.lower(), value) for key, value in omm.items()]))\n",
-    "    \n",
+    "    def from_omm(cls, omm) -> \"OrbitState\":\n",
+    "        return OrbitState.model_validate(\n",
+    "            dict([(key.lower(), value) for key, value in omm.items()])\n",
+    "        )\n",
+    "\n",
     "    def to_omm(self) -> dict:\n",
-    "        return dict([\n",
-    "            (\n",
-    "                key.upper(), \n",
-    "                \"\" if value is None\n",
-    "                else value.isoformat() if isinstance(value, datetime)\n",
-    "                else value\n",
-    "            )\n",
-    "            for key, value in self.model_dump().items()\n",
-    "        ])\n",
+    "        return dict(\n",
+    "            [\n",
+    "                (\n",
+    "                    key.upper(),\n",
+    "                    (\n",
+    "                        \"\"\n",
+    "                        if value is None\n",
+    "                        else value.isoformat() if isinstance(value, datetime) else value\n",
+    "                    ),\n",
+    "                )\n",
+    "                for key, value in self.model_dump().items()\n",
+    "            ]\n",
+    "        )\n",
     "\n",
     "    def to_satrec(self) -> Satrec:\n",
     "        sat = Satrec()\n",
@@ -67,34 +110,32 @@
     "    def to_tle(self) -> List[str]:\n",
     "        return exporter.export_tle(self.to_satrec())\n",
     "\n",
+    "\n",
     "class PropagationRequest(BaseModel):\n",
-    "    orbit: OrbitState = Field(\n",
-    "        ...,\n",
-    "        description=\"Orbit to be propagated.\"\n",
-    "    )\n",
-    "    start: AwareDatetime = Field(\n",
-    "        ...,\n",
-    "        description=\"Propagation start time.\"\n",
-    "    )\n",
-    "    duration: timedelta = Field(\n",
-    "        ...,\n",
-    "        description=\"Propagation duration.\"\n",
-    "    )\n",
-    "    time_step: timedelta = Field(\n",
-    "        ...,\n",
-    "        description=\"Propagation time step duration.\"\n",
-    "    )\n",
+    "    orbit: OrbitState = Field(..., description=\"Orbit to be propagated.\")\n",
+    "    start: AwareDatetime = Field(..., description=\"Propagation start time.\")\n",
+    "    duration: timedelta = Field(..., description=\"Propagation duration.\")\n",
+    "    time_step: timedelta = Field(..., description=\"Propagation time step duration.\")\n",
+    "\n",
     "\n",
     "class PropagationRecord(BaseModel):\n",
-    "    time: datetime = Field(..., description=\"Time\")\n",
-    "    position: List[float] = Field(..., min_length=3, max_length=3, description=\"Position\")\n",
-    "    velocity: List[float] = Field(..., min_length=3, max_length=3, description=\"Velocity\")\n",
+    "    time: AwareDatetime = Field(..., description=\"Time\")\n",
+    "    position: List[float] = Field(\n",
+    "        ...,\n",
+    "        min_length=3,\n",
+    "        max_length=3,\n",
+    "        description=\"Position (m in International Celestial Reference System)\",\n",
+    "    )\n",
+    "    velocity: List[float] = Field(\n",
+    "        ...,\n",
+    "        min_length=3,\n",
+    "        max_length=3,\n",
+    "        description=\"Velocity (m/s in International Celestial Reference System)\",\n",
+    "    )\n",
+    "\n",
     "\n",
     "class PropagationResponse(BaseModel):\n",
-    "    records: List[PropagationRecord] = Field(\n",
-    "        [],\n",
-    "        description=\"Propagation results\"\n",
-    "    )"
+    "    records: List[PropagationRecord] = Field([], description=\"Propagation results\")"
    ]
   },
   {
@@ -117,24 +158,28 @@
     "\n",
     "import pandas as pd\n",
     "\n",
+    "\n",
     "def propagate_tatc(request: PropagationRequest) -> PropagationResponse:\n",
     "    return PropagationResponse(\n",
     "        records=collect_orbit_track(\n",
     "            Satellite(\n",
     "                name=request.orbit.object_name,\n",
-    "                orbit=TwoLineElements(\n",
-    "                    tle=request.orbit.to_tle()\n",
-    "                )\n",
+    "                orbit=TwoLineElements(tle=request.orbit.to_tle()),\n",
     "            ),\n",
     "            Instrument(name=\"Instrument\"),\n",
-    "            pd.date_range(request.start, request.start + request.duration, freq=request.time_step),\n",
+    "            pd.date_range(\n",
+    "                request.start, request.start + request.duration, freq=request.time_step\n",
+    "            ),\n",
     "            coordinates=OrbitCoordinate.ECI,\n",
-    "            orbit_output=OrbitOutput.POSITION_VELOCITY\n",
-    "        ).apply(lambda r: PropagationRecord(\n",
-    "            time = r.time,\n",
-    "            position = r.geometry.coords[0],\n",
-    "            velocity = r.velocity.coords[0]\n",
-    "        ), axis = 1)\n",
+    "            orbit_output=OrbitOutput.POSITION_VELOCITY,\n",
+    "        ).apply(\n",
+    "            lambda r: PropagationRecord(\n",
+    "                time=r.time,\n",
+    "                position=r.geometry.coords[0],\n",
+    "                velocity=r.velocity.coords[0],\n",
+    "            ),\n",
+    "            axis=1,\n",
+    "        )\n",
     "    )"
    ]
   },
@@ -3214,10 +3259,10 @@
    ],
    "source": [
     "request = PropagationRequest(\n",
-    "    orbit = OrbitState.from_omm(iss),\n",
-    "    start = datetime(2024, 1, 1, tzinfo = timezone.utc),\n",
-    "    duration = timedelta(days=1),\n",
-    "    time_step = timedelta(minutes=1)\n",
+    "    orbit=OrbitState.from_omm(iss),\n",
+    "    start=datetime(2024, 1, 1, tzinfo=timezone.utc),\n",
+    "    duration=timedelta(days=1),\n",
+    "    time_step=timedelta(minutes=1),\n",
     ")\n",
     "\n",
     "display(request.model_dump())\n",
