--- a/tatc-orbit-example.ipynb
+++ b/tatc-orbit-example.ipynb
@@ -111,16 +111,22 @@
     "    def to_tle(self) -> List[str]:\n",
     "        return exporter.export_tle(self.to_satrec())\n",
     "\n",
+    "\n",
     "class ReferenceFrame(str, Enum):\n",
     "    ECEF = \"ECEF\"\n",
     "    ICRF = \"ICRF\"\n",
+    "\n",
     "\n",
     "class PropagationRequest(BaseModel):\n",
     "    orbit: OrbitState = Field(..., description=\"Orbit to be propagated.\")\n",
     "    start: AwareDatetime = Field(..., description=\"Propagation start time.\")\n",
     "    duration: timedelta = Field(..., description=\"Propagation duration.\")\n",
     "    time_step: timedelta = Field(..., description=\"Propagation time step duration.\")\n",
-    "    frame: Union[ReferenceFrame,str] = Field(ReferenceFrame.ICRF, description=\"Reference frame in which propagation results defined.\")\n",
+    "    frame: Union[ReferenceFrame, str] = Field(\n",
+    "        ReferenceFrame.ICRF,\n",
+    "        description=\"Reference frame in which propagation results defined.\",\n",
+    "    )\n",
+    "\n",
     "\n",
     "class PropagationRecord(BaseModel):\n",
     "    time: AwareDatetime = Field(..., description=\"Time\")\n",
@@ -140,8 +146,9 @@
     "\n",
     "class PropagationResponse(BaseModel):\n",
     "    records: List[PropagationRecord] = Field([], description=\"Propagation results\")\n",
-    "    frame: Union[ReferenceFrame,str] = Field(\n",
-    "        ReferenceFrame.ICRF, description=\"Reference frame in which position/velocity defined.\"\n",
+    "    frame: Union[ReferenceFrame, str] = Field(\n",
+    "        ReferenceFrame.ICRF,\n",
+    "        description=\"Reference frame in which position/velocity defined.\",\n",
     "    )"
    ]
   },
@@ -177,9 +184,15 @@
     "            pd.date_range(\n",
     "                request.start, request.start + request.duration, freq=request.time_step\n",
     "            ),\n",
-    "            coordinates=OrbitCoordinate.ECI if request.frame == ReferenceFrame.ICRF \n",
-    "            else OrbitCoordinate.ECEF if request.frame == ReferenceFrame.ECEF \n",
-    "            else RuntimeError(f\"{request.frame} not implemented.\"),\n",
+    "            coordinates=(\n",
+    "                OrbitCoordinate.ECI\n",
+    "                if request.frame == ReferenceFrame.ICRF\n",
+    "                else (\n",
+    "                    OrbitCoordinate.ECEF\n",
+    "                    if request.frame == ReferenceFrame.ECEF\n",
+    "                    else RuntimeError(f\"{request.frame} not implemented.\")\n",
+    "                )\n",
+    "            ),\n",
     "            orbit_output=OrbitOutput.POSITION_VELOCITY,\n",
     "        ).apply(\n",
     "            lambda r: PropagationRecord(\n",
@@ -189,7 +202,7 @@
     "            ),\n",
     "            axis=1,\n",
     "        ),\n",
-    "        frame=request.frame\n",
+    "        frame=request.frame,\n",
     "    )"
    ]
   },
