--- a/tatc-orbit-example.ipynb
+++ b/tatc-orbit-example.ipynb
@@ -113,7 +113,7 @@
     "\n",
     "\n",
     "class ReferenceFrame(str, Enum):\n",
-    "    ECEF = \"ECEF\" # Earth-centered Earth-fixed Frame\n",
+    "    ECEF = \"ECEF\" # Earth-Centered Earth-Fixed Reference Frame\n",
     "    ICRF = \"ICRF\" # International Celestial Reference Frame\n",
     "\n",
     "\n",
