--- a/tatc-orbit-example.ipynb
+++ b/tatc-orbit-example.ipynb
@@ -156,7 +156,7 @@
     "    )\n",
     "    body_orientation: Optional[Union[FixedOrientation, Quaternion]] = Field(\n",
     "        None,\n",
-    "        description=\"Orientation of the body-fixed frame.\",\n",
+    "        description=\"Orientation of the spacecraft body-fixed frame, relative to requested frame.\",\n",
     "    )\n",
     "    view_orientation: Optional[Quaternion] = Field(\n",
     "        [0, 0, 0, 1],\n",
