shorten example to 1 hour to save on space

--- a/src/tatc-propagation-example.ipynb
+++ b/src/tatc-propagation-example.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "# Example\n",
     "\n",
-    "Pulls OMM file from Celestrak, issues propagation request starting Jan 1 2024 for 1 day (1 minute time step), and displays results."
+    "Pulls OMM file from Celestrak, issues propagation request starting Jan 1 2024 for 1 hour (1 minute time step), and displays results."
    ]
   },
   {
@@ -326,7 +326,7 @@
     "request = PropagationRequest(\n",
     "    orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm),\n",
     "    start=datetime(2024, 1, 1, tzinfo=timezone.utc),\n",
-    "    duration=timedelta(days=1),\n",
+    "    duration=timedelta(hours=1),\n",
     "    time_step=timedelta(minutes=1),\n",
     "    frame=CartesianReferenceFrame.ICRF,\n",
     ")\n",
