apply black formatting

--- a/src/tatc-coverage-example.ipynb
+++ b/src/tatc-coverage-example.ipynb
@@ -21,21 +21,28 @@
     "import pandas as pd\n",
     "\n",
     "from tatc.schemas import Instrument, Satellite as TATC_Satellite, TwoLineElements, Point\n",
-    "from tatc.analysis import collect_multi_observations, aggregate_observations, reduce_observations\n",
+    "from tatc.analysis import (\n",
+    "    collect_multi_observations,\n",
+    "    aggregate_observations,\n",
+    "    reduce_observations,\n",
+    ")\n",
     "\n",
     "from eose.coverage import CoverageRecord, CoverageRequest, CoverageResponse\n",
     "from eose.grids import UniformAngularGrid\n",
     "from eose.orbits import GeneralPerturbationsOrbitState\n",
     "from eose.satellites import Satellite\n",
     "\n",
+    "\n",
     "def coverage_tatc(request: CoverageRequest) -> CoverageResponse:\n",
-    "    unique_ids = len(set(target.id for target in request.targets)) == len(request.targets)\n",
+    "    unique_ids = len(set(target.id for target in request.targets)) == len(\n",
+    "        request.targets\n",
+    "    )\n",
     "    points = [\n",
     "        Point(\n",
-    "            id = target.id if unique_ids and isinstance(target.id, int) else i,\n",
-    "            longitude = target.position[0],\n",
-    "            latitude = target.position[1],\n",
-    "            altitude = target.position[2] if len(target.position) > 2 else 0\n",
+    "            id=target.id if unique_ids and isinstance(target.id, int) else i,\n",
+    "            longitude=target.position[0],\n",
+    "            latitude=target.position[1],\n",
+    "            altitude=target.position[2] if len(target.position) > 2 else 0,\n",
     "        )\n",
     "        for i, target in enumerate(request.targets)\n",
     "    ]\n",
@@ -44,11 +51,8 @@
     "            name=satellite.orbit.object_name,\n",
     "            orbit=TwoLineElements(tle=satellite.orbit.to_tle()),\n",
     "            instruments=[\n",
-    "                Instrument(\n",
-    "                    name=\"Default\",\n",
-    "                    field_of_regard=satellite.field_of_view\n",
-    "                )\n",
-    "            ]\n",
+    "                Instrument(name=\"Default\", field_of_regard=satellite.field_of_view)\n",
+    "            ],\n",
     "        )\n",
     "        for satellite in request.satellites\n",
     "    ]\n",
@@ -58,10 +62,10 @@
     "            pd.concat(\n",
     "                Parallel(-1)(\n",
     "                    delayed(collect_multi_observations)(\n",
-    "                        point, \n",
-    "                        satellites, \n",
-    "                        request.start, \n",
-    "                        request.start + request.duration\n",
+    "                        point,\n",
+    "                        satellites,\n",
+    "                        request.start,\n",
+    "                        request.start + request.duration,\n",
     "                    )\n",
     "                    for point in points\n",
     "                )\n",
@@ -72,18 +76,20 @@
     "    records = list(\n",
     "        observations.apply(\n",
     "            lambda r: CoverageRecord(\n",
-    "                target=request.targets[points.index(next(p for p in points if p.id == r[\"point_id\"]))],\n",
-    "                mean_revisit=None if pd.isnull(r[\"revisit\"]) else timedelta(seconds=r[\"revisit\"].total_seconds()),\n",
-    "                number_samples=r[\"samples\"]\n",
+    "                target=request.targets[\n",
+    "                    points.index(next(p for p in points if p.id == r[\"point_id\"]))\n",
+    "                ],\n",
+    "                mean_revisit=(\n",
+    "                    None\n",
+    "                    if pd.isnull(r[\"revisit\"])\n",
+    "                    else timedelta(seconds=r[\"revisit\"].total_seconds())\n",
+    "                ),\n",
+    "                number_samples=r[\"samples\"],\n",
     "            ),\n",
     "            axis=1,\n",
     "        )\n",
     "    ) + [\n",
-    "        CoverageRecord(\n",
-    "            target=request.targets[i],\n",
-    "            mean_revisit=None,\n",
-    "            number_samples=0\n",
-    "        )\n",
+    "        CoverageRecord(target=request.targets[i], mean_revisit=None, number_samples=0)\n",
     "        for i, point in enumerate(points)\n",
     "        if not any(observations[\"point_id\"] == point.id)\n",
     "    ]\n",
@@ -91,10 +97,16 @@
     "\n",
     "    return CoverageResponse(\n",
     "        records=records,\n",
-    "        harmonic_mean_revisit=None \n",
-    "            if observations.dropna(subset=\"revisit\").empty \n",
-    "            else timedelta(seconds=hmean(observations.dropna(subset=\"revisit\")[\"revisit\"].dt.total_seconds())),\n",
-    "        coverage_fraction=len(observations.index) / len(points)\n",
+    "        harmonic_mean_revisit=(\n",
+    "            None\n",
+    "            if observations.dropna(subset=\"revisit\").empty\n",
+    "            else timedelta(\n",
+    "                seconds=hmean(\n",
+    "                    observations.dropna(subset=\"revisit\")[\"revisit\"].dt.total_seconds()\n",
+    "                )\n",
+    "            )\n",
+    "        ),\n",
+    "        coverage_fraction=len(observations.index) / len(points),\n",
     "    )"
    ]
   },
@@ -309,8 +321,7 @@
     "request = CoverageRequest(\n",
     "    satellites=[\n",
     "        Satellite(\n",
-    "            orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm),\n",
-    "            field_of_view=100\n",
+    "            orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm), field_of_view=100\n",
     "        )\n",
     "    ],\n",
     "    targets=UniformAngularGrid(\n",
@@ -376,8 +387,12 @@
     "\n",
     "# example composite plot using GeoDataFrames\n",
     "fig, ax = plt.subplots()\n",
-    "ax.set_title(f\"Mean Revisit (Harmonic Mean={response.harmonic_mean_revisit/timedelta(hours=1):.1f} hr)\")\n",
-    "data[\"mean_revisit_hr\"] = data.apply(lambda r: r[\"mean_revisit\"]/timedelta(hours=1), axis=1)\n",
+    "ax.set_title(\n",
+    "    f\"Mean Revisit (Harmonic Mean={response.harmonic_mean_revisit/timedelta(hours=1):.1f} hr)\"\n",
+    ")\n",
+    "data[\"mean_revisit_hr\"] = data.apply(\n",
+    "    lambda r: r[\"mean_revisit\"] / timedelta(hours=1), axis=1\n",
+    ")\n",
     "data.plot(ax=ax, column=\"mean_revisit_hr\", legend=True)\n",
     "world.boundary.plot(ax=ax, lw=0.5, color=\"k\")\n",
     "ax.set_aspect(\"equal\")\n",
