--- a/src/tatc-coverage-example.ipynb
+++ b/src/tatc-coverage-example.ipynb
@@ -27,7 +27,12 @@
     "    reduce_observations,\n",
     ")\n",
     "\n",
-    "from eose.coverage import CoverageRecord, CoverageRequest, CoverageResponse, CoverageSample\n",
+    "from eose.coverage import (\n",
+    "    CoverageRecord,\n",
+    "    CoverageRequest,\n",
+    "    CoverageResponse,\n",
+    "    CoverageSample,\n",
+    ")\n",
     "from eose.grids import UniformAngularGrid\n",
     "from eose.orbits import GeneralPerturbationsOrbitState\n",
     "from eose.satellites import Satellite\n",
@@ -79,11 +84,8 @@
     "                    points.index(next(p for p in points if p.id == r[\"point_id\"]))\n",
     "                ],\n",
     "                samples=aggregated_obs[aggregated_obs.point_id == r[\"point_id\"]].apply(\n",
-    "                    lambda s: CoverageSample(\n",
-    "                        start=s.start,\n",
-    "                        duration=s.end - s.start\n",
-    "                    ), \n",
-    "                    axis=1\n",
+    "                    lambda s: CoverageSample(start=s.start, duration=s.end - s.start),\n",
+    "                    axis=1,\n",
     "                ),\n",
     "                mean_revisit=(\n",
     "                    None\n",
