--- a/src/point-example.ipynb
+++ b/src/point-example.ipynb
@@ -143,7 +143,7 @@
     "# example transformation to a GeoDataFrame\n",
     "targets = gpd.GeoDataFrame.from_features(\n",
     "    FeatureCollection(features=[p.as_feature() for p in [p1, p2]]),\n",
-    "    crs=\"EPSG:4326\" # bugfix rquired for geopandas < 0.14\n",
+    "    crs=\"EPSG:4326\",  # bugfix rquired for geopandas < 0.14\n",
     ")\n",
     "display(targets)  # display GeoDataFrame"
    ]
@@ -296,15 +296,17 @@
     "\n",
     "# constructing an object model\n",
     "g = UniformAngularGrid(\n",
-    "    delta_latitude=5, delta_longitude=5, region=mapping(box(-170, 0, -50, 90)), crs=\"EPSG:4326\"\n",
+    "    delta_latitude=5,\n",
+    "    delta_longitude=5,\n",
+    "    region=mapping(box(-170, 0, -50, 90)),\n",
+    "    crs=\"EPSG:4326\",\n",
     ")\n",
     "display(g.model_dump_json())  # display EOSE JSON\n",
     "display(g.as_features().model_dump_json())  # display GeoJSON\n",
     "\n",
     "# example transformation to a GeoDataFrame\n",
     "grid = gpd.GeoDataFrame.from_features(\n",
-    "    g.as_features(),\n",
-    "    crs=\"EPSG:4326\" # bugfix rquired for geopandas < 0.14\n",
+    "    g.as_features(), crs=\"EPSG:4326\"  # bugfix rquired for geopandas < 0.14\n",
     ")\n",
     "display(grid)  # display GeoDataFrame"
    ]
