--- a/src/eose/instrument-example.ipynb
+++ b/src/eose/instrument-example.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,18 +57,9 @@
      "output_type": "stream",
      "text": [
       "name=None id=None mass=100.5 volume=0.75 power=150.0 orientation=[0, 0, 0, 1] field_of_view=SphericalGeometry(shape='CIRCULAR', diameter=30.0, angle_height=None, angle_width=None) data_rate=10.5 bits_per_pixel=16\n",
-      "name=None id=None mass=100.5 volume=0.75 power=150.0 orientation=[0.5, 0.5, 0.5, 0.5] field_of_view=SphericalGeometry(shape='RECTANGULAR', diameter=None, angle_height=10.0, angle_width=30.0) data_rate=50.5 bits_per_pixel=8\n"
+      "name=None id=None mass=100.5 volume=0.75 power=150.0 orientation=[0.5, 0.5, 0.5, 0.5] field_of_view=SphericalGeometry(shape='RECTANGULAR', diameter=None, angle_height=10.0, angle_width=30.0) data_rate=50.5 bits_per_pixel=8\n",
+      "name=None id=None mass=100.5 volume=0.75 power=150.0 orientation=[0.5, 0.5, 0.5, 0.5] field_of_view=SphericalGeometry(shape=<Shape.CIRCULAR: 'CIRCULAR'>, diameter=30.0, angle_height=None, angle_width=None) data_rate=50.5 bits_per_pixel=8\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "BasicSensor(name=None, id=None, mass=100.5, volume=0.75, power=150.0, orientation=[0.5, 0.5, 0.5, 0.5], field_of_view=SphericalGeometry(shape=<Shape.CIRCULAR: 'CIRCULAR'>, diameter=30.0, angle_height=None, angle_width=None), data_rate=50.5, bits_per_pixel=8)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
