spherical geometry revised to be indicated in distinct objects per geometric config

--- a/src/instrument-example.ipynb
+++ b/src/instrument-example.ipynb
@@ -2,73 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name=None id=None mass=100.5 volume=0.75 power=150.0 orientation=[0.0, 0.0, 0.0, 1.0] field_of_view=SphericalGeometry(shape='CIRCULAR', diameter=30.0, angle_height=None, angle_width=None) data_rate=10.5 bits_per_pixel=16\n",
-      "name=None id=None mass=100.5 volume=0.75 power=150.0 orientation=[0.5, 0.5, 0.5, 0.5] field_of_view=SphericalGeometry(shape='RECTANGULAR', diameter=None, angle_height=10.0, angle_width=30.0) data_rate=50.5 bits_per_pixel=8\n",
-      "shape='CIRCULAR' diameter=90.0 angle_height=None angle_width=None\n",
-      "shape='RECTANGULAR' diameter=None angle_height=90.0 angle_width=45.0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1 validation error for SphericalGeometry\n",
-       "  Value error, RECTANGULAR shape must have both angle_height and angle_width. [type=value_error, input_value={'shape': <Shape.RECTANGU...LAR'>, 'diameter': 10.0}, input_type=dict]\n",
-       "    For further information visit https://errors.pydantic.dev/2.8/v/value_error"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from eose.instruments import BasicSensor, SphericalGeometry, Shape\n",
+    "from eose.instruments import  CircularGeometry, RectangularGeometry, BasicSensor\n",
     "\n",
     "from pydantic import ValidationError\n",
     "\n",
     "# Example usage of SphericalGeometry class used to define the field of view of the instrument\n",
     "\n",
-    "spherical_geom = SphericalGeometry(shape=Shape.CIRCULAR, diameter=90.0)\n",
-    "print(spherical_geom)\n",
+    "circ_geom = CircularGeometry(diameter=90.0)\n",
+    "print(circ_geom)\n",
     "\n",
-    "spherical_geom = SphericalGeometry(shape=Shape.RECTANGULAR, angle_height= 90.0, angle_width= 45)\n",
-    "print(spherical_geom)\n",
-    "\n",
-    "# example validation error\n",
-    "try:\n",
-    "    SphericalGeometry(shape=Shape.RECTANGULAR, diameter=10.0)\n",
-    "except ValidationError as err:\n",
-    "    display(err)"
+    "rect_geom = RectangularGeometry(angle_height= 90.0, angle_width= 45)\n",
+    "print(rect_geom)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name=None id=None mass=100.5 volume=0.75 power=150.0 orientation=[0, 0, 0, 1] field_of_view=SphericalGeometry(shape='CIRCULAR', diameter=30.0, angle_height=None, angle_width=None) data_rate=10.5 bits_per_pixel=16\n",
-      "name=None id=None mass=100.5 volume=0.75 power=150.0 orientation=[0.5, 0.5, 0.5, 0.5] field_of_view=SphericalGeometry(shape='RECTANGULAR', diameter=None, angle_height=10.0, angle_width=30.0) data_rate=50.5 bits_per_pixel=8\n",
-      "name=None id=None mass=100.5 volume=0.75 power=150.0 orientation=[0.5, 0.5, 0.5, 0.5] field_of_view=SphericalGeometry(shape=<Shape.CIRCULAR: 'CIRCULAR'>, diameter=30.0, angle_height=None, angle_width=None) data_rate=50.5 bits_per_pixel=8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example usage of BasicSensor class\n",
     "\n",
     "sensor = BasicSensor(   mass= 100.5,\n",
     "                        volume= 0.75,\n",
     "                        power= 150.0,\n",
-    "                        field_of_view = SphericalGeometry(shape=\"CIRCULAR\", diameter=30.0),\n",
+    "                        field_of_view = CircularGeometry(diameter=30.0),\n",
     "                        data_rate= 10.5,\n",
     "                        bits_per_pixel= 16\n",
     "                    )\n",
@@ -79,7 +41,7 @@
     "                        volume= 0.75,\n",
     "                        power= 150.0,\n",
     "                        orientation= list([0.5,0.5,0.5,0.5]),\n",
-    "                        field_of_view = SphericalGeometry(shape=\"RECTANGULAR\", angle_width=30.0, angle_height=10.0),\n",
+    "                        field_of_view = RectangularGeometry(ngle_width=30.0, angle_height=10.0),\n",
     "                        data_rate= 50.5,\n",
     "                        bits_per_pixel= 8\n",
     "                    )\n",
