wip: Basic Sensor example

--- a/src/instrument-example.ipynb
+++ b/src/instrument-example.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example usage of BasicSensor class\n",
+    "# Example simple usage of eose-api BasicSensor class\n",
     "\n",
     "sensor = BasicSensor(   mass= 100.5,\n",
     "                        volume= 0.75,\n",
@@ -57,6 +57,56 @@
     "                )\n",
     "\n",
     "print(sensor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example usage with TAT-C and InstruPy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from instrupy.basic_sensor_model import BasicSensorModel\n",
+    "\n",
+    "from tatc.schemas import Instrument, Satellite, TwoLineElements\n",
+    "from tatc.analysis import collect_orbit_track, OrbitCoordinate, OrbitOutput\n",
+    "\n",
+    "from eose.propagation import PropagationRecord, PropagationRequest, PropagationResponse\n",
+    "from eose.orbits import GeneralPerturbationsOrbitState\n",
+    "from eose.utils import CartesianReferenceFrame, FixedOrientation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run propagation with TAT-C to get satellite states\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Run coverage analysis with TAT-C to get access-times at Target ground points\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run InstruPy Basic Sensor datametrics calculator to get the incidence angle\n",
+    "\n",
+    "\n",
+    "def datametrics_instrupy(request: BasicSensorDataMetricRequest) -> BasicSensorDataMetricResponse:"
    ]
   }
  ],
