wip: basic sensor example

--- a/src/instrument-example.ipynb
+++ b/src/instrument-example.ipynb
@@ -56,7 +56,9 @@
     "                    bits_per_pixel= 8\n",
     "                )\n",
     "\n",
-    "print(sensor)"
+    "print(sensor)\n",
+    "\n",
+    "display(sensor.model_dump_json())"
    ]
   },
   {
@@ -72,14 +74,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "from datetime import datetime, timedelta, timezone\n",
+    "\n",
     "from instrupy.basic_sensor_model import BasicSensorModel\n",
     "\n",
-    "from tatc.schemas import Instrument, Satellite, TwoLineElements\n",
+    "from tatc.schemas import Instrument, Satellite as TATC_Satellite, TwoLineElements, Point\n",
     "from tatc.analysis import collect_orbit_track, OrbitCoordinate, OrbitOutput\n",
+    "from tatc.analysis import (\n",
+    "    collect_multi_observations,\n",
+    "    aggregate_observations,\n",
+    "    reduce_observations,\n",
+    ")\n",
     "\n",
+    "from eose.datametric import DataMetricRequest, BasicSensorDataMetricResponse\n",
     "from eose.propagation import PropagationRecord, PropagationRequest, PropagationResponse\n",
     "from eose.orbits import GeneralPerturbationsOrbitState\n",
-    "from eose.utils import CartesianReferenceFrame, FixedOrientation"
+    "from eose.utils import CartesianReferenceFrame, FixedOrientation\n",
+    "from eose.coverage import (\n",
+    "    CoverageRecord,\n",
+    "    CoverageRequest,\n",
+    "    CoverageResponse,\n",
+    "    CoverageSample,\n",
+    ")\n",
+    "from eose.grids import UniformAngularGrid\n",
+    "from eose.satellites import Satellite\n",
+    "\n",
+    "from shapely.geometry import box, mapping\n",
+    "from joblib import Parallel, delayed\n",
+    "from scipy.stats import hmean\n",
+    "import pandas as pd\n",
+    "\n"
    ]
   },
   {
@@ -89,12 +114,168 @@
    "outputs": [],
    "source": [
     "# Run propagation with TAT-C to get satellite states\n",
+    "def propagate_tatc(request: PropagationRequest) -> PropagationResponse:\n",
+    "    return PropagationResponse(\n",
+    "        records=collect_orbit_track(\n",
+    "            TATC_Satellite(\n",
+    "                name=request.orbit.object_name,\n",
+    "                orbit=TwoLineElements(tle=request.orbit.to_tle()),\n",
+    "            ),\n",
+    "            Instrument(name=\"Instrument\"),\n",
+    "            pd.date_range(\n",
+    "                request.start, request.start + request.duration, freq=request.time_step\n",
+    "            ),\n",
+    "            coordinates=(\n",
+    "                OrbitCoordinate.ECI\n",
+    "                if request.frame == CartesianReferenceFrame.ICRF\n",
+    "                else OrbitCoordinate.ECEF\n",
+    "            ),\n",
+    "            orbit_output=OrbitOutput.POSITION_VELOCITY,\n",
+    "        ).apply(\n",
+    "            lambda r: PropagationRecord(\n",
+    "                time=r.time,\n",
+    "                frame=request.frame,\n",
+    "                position=r.geometry.coords[0],\n",
+    "                velocity=r.velocity.coords[0],\n",
+    "                body_orientation=FixedOrientation.NADIR_GEOCENTRIC,\n",
+    "            ),\n",
+    "            axis=1,\n",
+    "        ),\n",
+    "    )\n",
     "\n",
+    "iss_omm_str = '[{\"OBJECT_NAME\":\"ISS (ZARYA)\",\"OBJECT_ID\":\"1998-067A\",\"EPOCH\":\"2024-06-07T09:53:34.728000\",\"MEAN_MOTION\":15.50975122,\"ECCENTRICITY\":0.0005669,\"INCLINATION\":51.6419,\"RA_OF_ASC_NODE\":3.7199,\"ARG_OF_PERICENTER\":284.672,\"MEAN_ANOMALY\":139.0837,\"EPHEMERIS_TYPE\":0,\"CLASSIFICATION_TYPE\":\"U\",\"NORAD_CAT_ID\":25544,\"ELEMENT_SET_NO\":999,\"REV_AT_EPOCH\":45703,\"BSTAR\":0.00033759,\"MEAN_MOTION_DOT\":0.00019541,\"MEAN_MOTION_DDOT\":0}]'\n",
+    "iss_omm = json.loads(iss_omm_str)[0]\n",
     "\n",
+    "request = PropagationRequest(\n",
+    "    orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm),\n",
+    "    start=datetime(2024, 1, 1, tzinfo=timezone.utc),\n",
+    "    duration=timedelta(hours=1),\n",
+    "    time_step=timedelta(minutes=1),\n",
+    "    frame=CartesianReferenceFrame.ICRF,\n",
+    ")\n",
     "\n",
+    "display(request.model_dump_json())\n",
+    "\n",
+    "response = propagate_tatc(request)\n",
+    "\n",
+    "display(response.model_dump_json())\n",
+    "\n",
+    "data = response.as_dataframe()\n",
+    "\n",
+    "display(data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Run coverage analysis with TAT-C to get access-times at Target ground points\n",
     "\n",
-    "\n"
+    "def coverage_tatc(request: CoverageRequest) -> CoverageResponse:\n",
+    "    unique_ids = len(set(target.id for target in request.targets)) == len(\n",
+    "        request.targets\n",
+    "    )\n",
+    "    points = [\n",
+    "        Point(\n",
+    "            id=target.id if unique_ids and isinstance(target.id, int) else i,\n",
+    "            longitude=target.position[0],\n",
+    "            latitude=target.position[1],\n",
+    "            altitude=target.position[2] if len(target.position) > 2 else 0,\n",
+    "        )\n",
+    "        for i, target in enumerate(request.targets)\n",
+    "    ]\n",
+    "    satellites = [\n",
+    "        TATC_Satellite(\n",
+    "            name=satellite.orbit.object_name,\n",
+    "            orbit=TwoLineElements(tle=satellite.orbit.to_tle()),\n",
+    "            instruments=[\n",
+    "                Instrument(name=\"Default\", field_of_regard=satellite.field_of_view)\n",
+    "            ],\n",
+    "        )\n",
+    "        for satellite in request.satellites\n",
+    "    ]\n",
+    "\n",
+    "    aggregated_obs = aggregate_observations(\n",
+    "        pd.concat(\n",
+    "            Parallel(-1)(\n",
+    "                delayed(collect_multi_observations)(\n",
+    "                    point,\n",
+    "                    satellites,\n",
+    "                    request.start,\n",
+    "                    request.start + request.duration,\n",
+    "                )\n",
+    "                for point in points\n",
+    "            )\n",
+    "        )\n",
+    "    )\n",
+    "    reduced_obs = reduce_observations(aggregated_obs)\n",
+    "\n",
+    "    records = list(\n",
+    "        reduced_obs.apply(\n",
+    "            lambda r: CoverageRecord(\n",
+    "                target=request.targets[\n",
+    "                    points.index(next(p for p in points if p.id == r[\"point_id\"]))\n",
+    "                ],\n",
+    "                samples=aggregated_obs[aggregated_obs.point_id == r[\"point_id\"]].apply(\n",
+    "                    lambda s: CoverageSample(start=s.start, duration=s.end - s.start),\n",
+    "                    axis=1,\n",
+    "                ),\n",
+    "                mean_revisit=(\n",
+    "                    None\n",
+    "                    if pd.isnull(r[\"revisit\"])\n",
+    "                    else timedelta(seconds=r[\"revisit\"].total_seconds())\n",
+    "                ),\n",
+    "                number_samples=r[\"samples\"],\n",
+    "            ),\n",
+    "            axis=1,\n",
+    "        )\n",
+    "    ) + [\n",
+    "        CoverageRecord(target=request.targets[i], mean_revisit=None, number_samples=0)\n",
+    "        for i, point in enumerate(points)\n",
+    "        if not any(reduced_obs[\"point_id\"] == point.id)\n",
+    "    ]\n",
+    "    records.sort(key=lambda r: r.target.id)\n",
+    "\n",
+    "    return CoverageResponse(\n",
+    "        records=records,\n",
+    "        harmonic_mean_revisit=(\n",
+    "            None\n",
+    "            if reduced_obs.dropna(subset=\"revisit\").empty\n",
+    "            else timedelta(\n",
+    "                seconds=hmean(\n",
+    "                    reduced_obs.dropna(subset=\"revisit\")[\"revisit\"].dt.total_seconds()\n",
+    "                )\n",
+    "            )\n",
+    "        ),\n",
+    "        coverage_fraction=len(reduced_obs.index) / len(points),\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "\n",
+    "request = CoverageRequest(\n",
+    "    satellites=[\n",
+    "        Satellite(\n",
+    "            orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm), field_of_view=100\n",
+    "        )\n",
+    "    ],\n",
+    "    targets=UniformAngularGrid(\n",
+    "        delta_latitude=20, delta_longitude=20, region=mapping(box(-180, -50, 180, 50))\n",
+    "    ).as_targets(),\n",
+    "    start=datetime(2024, 1, 1, tzinfo=timezone.utc),\n",
+    "    duration=timedelta(days=1),\n",
+    ")\n",
+    "\n",
+    "display(request.model_dump_json())\n",
+    "\n",
+    "response = coverage_tatc(request)\n",
+    "\n",
+    "display(response.model_dump_json())\n",
+    "\n",
+    "data = response.as_dataframe()\n",
+    "\n",
+    "display(data)"
    ]
   },
   {
@@ -106,7 +287,13 @@
     "# Run InstruPy Basic Sensor datametrics calculator to get the incidence angle\n",
     "\n",
     "\n",
-    "def datametrics_instrupy(request: BasicSensorDataMetricRequest) -> BasicSensorDataMetricResponse:"
+    "def datametrics_instrupy(request: DataMetricRequest) -> BasicSensorDataMetricResponse:\n",
+    "    \n",
+    "    \n",
+    "    # Filter propagation record for each access and compute metrics throughout the access at each propagation point \n",
+    "\n",
+    "\n",
+    "    return"
    ]
   }
  ],
